apps/ollama/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ai
spec:
  type: ClusterIP
  selector:
    app: ollama

  ports:
  - port: 11434
    targetPort: 11434
