apps/ollama/ollama-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyAll-ollama-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
    - Ingress
  
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-ollama-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: ollama
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: go-puller
      ports:
        - protocol: TCP
          port: 11434
